Fix the header alignment

--- a/foundations/flex/03-flex-header-2/style.css
+++ b/foundations/flex/03-flex-header-2/style.css
@@ -12,7 +12,13 @@ body {
   background: white;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
+  display: flex;
+  gap: 16px;
+  align-items: center;
+  justify-content: space-between;
+  padding: 8px;
 }
+
 
 .profile-image {
   background: rebeccapurple;
@@ -20,6 +26,7 @@ body {
   border-radius: 50%;
   width: 48px;
   height: 48px;
+  flex-shrink: 0;
 }
 
 .logo {
@@ -45,4 +52,10 @@ a {
 
 ul {
   list-style-type: none;
+
+  align-items: center;
+  display: flex;
+  flex-direction: row;
+  gap: 16px;
+  flex:auto;
 }
